<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rows"
        android:id="@+id/rows"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/rowsSub"
        android:gravity="center_vertical"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="-"
        tools:ignore="HardcodedText"
        android:id="@+id/rowsSub"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cols" />


    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="3"
        android:maxLength="2"
        android:text="6"
        android:textSize="20sp"
        tools:ignore="HardcodedText"
        android:id="@+id/numRows"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/rowsSub"
        android:layout_alignBottom="@+id/rowsSub"
        android:gravity="center"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        tools:ignore="HardcodedText"
        android:id="@+id/rowsAdd"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/numRows" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cols"
        android:id="@+id/cols"
        android:gravity="center_vertical"
        android:layout_below="@+id/rowsSub"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/colsSub"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="-"
        tools:ignore="HardcodedText"
        android:id="@+id/colsSub"
        android:layout_below="@+id/rowsSub"
        android:layout_toRightOf="@+id/cols" />


    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="3"
        android:maxLength="2"
        android:text="6"
        android:textSize="20sp"
        tools:ignore="HardcodedText"
        android:id="@+id/numCols"
        android:layout_toRightOf="@+id/colsSub"
        android:layout_alignBottom="@+id/colsSub"
        android:gravity="center"
        android:layout_below="@+id/rowsSub"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        tools:ignore="HardcodedText"
        android:id="@+id/colsAdd"
        android:layout_below="@+id/numRows"
        android:layout_toRightOf="@+id/numCols" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine"
        android:id="@+id/mines"
        android:gravity="center_vertical"
        android:layout_below="@+id/colsSub"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/minesSub"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="-"
        tools:ignore="HardcodedText"
        android:id="@+id/minesSub"
        android:layout_below="@+id/colsSub"
        android:layout_toRightOf="@+id/cols" />


    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="3"
        android:maxLength="2"
        android:text="6"
        android:textSize="20sp"
        tools:ignore="HardcodedText"
        android:id="@+id/numMines"
        android:layout_toRightOf="@+id/minesSub"
        android:layout_alignBottom="@+id/minesSub"
        android:gravity="center"
        android:layout_below="@+id/colsSub"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        tools:ignore="HardcodedText"
        android:id="@+id/minesAdd"
        android:layout_below="@+id/numCols"
        android:layout_toRightOf="@+id/numMines" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mines">

        <Button
            android:id="@+id/begButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/beginner"
            />

        <Button
            android:id="@+id/medButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/medium"
            />

        <Button
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/hard"/>

    </LinearLayout>
</RelativeLayout>